bits about the regression tests

--- a/Manual/autodiff.bib
+++ b/Manual/autodiff.bib
@@ -19166,3 +19166,256 @@
 	ad_tools = "ADIFOR"
 }
 
+@INPROCEEDINGS{
+	   Bucker2009SaP,
+	author = "H. M. B{\"u}cker and A. Rasch and V. Rath and A. Wolf",
+	title = "Semi-automatic Parallelization of Direct and Inverse Problems for Geothermal
+	   Simulation",
+	booktitle = "Proceedings of the 24th ACM Symposium on Applied Computing, Honolulu, Hawaii,
+	   USA, March~8--12, 2009",
+	publisher = "ACM Press",
+	pages = "971--975",
+	doi = "10.1145/1529282.1529495",
+	address = "New York",
+	abstract = "We describe a strategy for parallelizing a geothermal simulation package using the
+	   shared-memory programming model OpenMP. During the code development OpenMP is employed for the
+	   direct problem in such a way that, in a subsequent step, the OpenMP-parallelized code can be
+	   transformed via automatic differentiation into an OpenMP-paral\-lelized code capable of
+	   computing derivatives for the inverse problem. Performance results on a Sun Fire X4600 using up to
+	   16 threads are reported demonstrating that, for the derivative computation, an approach using nested
+	   parallelism is more scalable than a single level of parallelism.",
+	year = "2009",
+	volume = "2",
+	ad_area = "Geophysics",
+	ad_theotech = "Parallelism"
+}
+
+@INPROCEEDINGS{
+	   Naumann2007ALA,
+	chapter = "Workshop on Advances in Programming Languages (WAPL'07)",
+	pages = "1133--1146",
+	author = "U.~Naumann and J. Riehme",
+	year = "2007",
+	title = "An {L}-Attributed Grammar for Adjoint Code",
+	booktitle = "Proceedings of IMCSIT'07",
+	editor = "M. Ganzha et al.",
+	publisher = "PTI",
+	ad_theotech = "Implementation Strategies"
+}
+
+@ARTICLE{
+	   Naumann2007OSD,
+	author = "U. Naumann and J.~Riehme",
+	title = "On Syntax-Directed Adjoint {F}ortran Code",
+	journal = "Computer Science and Information Systems (ComSIS)",
+	volume = "4",
+	number = "2",
+	pages = "47--64",
+	month = "December",
+	year = "2007",
+	ad_theotech = "Implementation Strategies"
+}
+
+@INPROCEEDINGS{
+	   Naumann2007AFa,
+	chapter = "Workshop on Computer Aspects of Numerical Algorithms (CANA'07)",
+	pages = "541--555",
+	author = "U.~Naumann and M.~Maier and J.~Riehme and B.~Christianson",
+	year = "2007",
+	title = "Automatic First- and Second-Order Adjoints for {T}runcated {N}ewton",
+	booktitle = "Proceedings of IMCSIT'07",
+	editor = "M. Ganzha et al.",
+	publisher = "PTI",
+	ad_area = "Optimization",
+	ad_tools = "NAGWare Fortran 95",
+	ad_theotech = "Second-Order Adjoint"
+}
+
+@INPROCEEDINGS{
+	   Naumann2008DCi,
+	note = "Invited Paper.",
+	author = "U.~Naumann",
+	year = "2008",
+	title = "Derivative Codes in Numerical Simulation and Optimization",
+	booktitle = "Proceedings of USYS'08: 2nd International Conference on Underwater System
+	   Technology",
+	editor = "M. Rizal Arshad"
+}
+
+@ARTICLE{
+	   Naumann2007EFa,
+	pages = "1140205--1140206",
+	note = "Special Issue: Sixth International Congress on Industrial Applied Mathematics
+	   (ICIAM07) and GAMM Annual Meeting, Z{\"u}rich 2007",
+	author = "U.~Naumann",
+	year = "2007",
+	title = "Exact First and Second Derivatives by Automatic Differentiation",
+	journal = "PAMM",
+	publisher = "Wiley",
+	volume = "7",
+	issue = "1"
+}
+
+@ARTICLE{
+	   Riehme2007Tde,
+	pages = "1140207--1140208",
+	note = "Special Issue: Sixth International Congress on Industrial Applied Mathematics
+	   (ICIAM07) and GAMM Annual Meeting, Z{\"u}rich 2007",
+	author = "J.~Riehme and U. Naumann and B. Christianson",
+	year = "2007",
+	title = "The differentiation-enabled {NAGW}are Fortran Compiler",
+	journal = "PAMM",
+	publisher = "Wiley",
+	volume = "7",
+	issue = "1",
+	ad_tools = "NAGWare Fortran 95"
+}
+
+@ARTICLE{
+	   Naumann2008OVE,
+	author = "U. Naumann and Y. Hu",
+	title = "Optimal Vertex Elimination in Single-Expression-Use Graphs",
+	volume = "35",
+	number = "1",
+	journal = "{ACM} Transactions on Mathematical Software",
+	year = "2008",
+	ad_theotech = "Combinatorics"
+}
+
+@INPROCEEDINGS{
+	   Griewank2002AJb,
+	year = "2002",
+	title = "Accumulating {J}acobians by Vertex, Edge, and Face Elimination",
+	booktitle = "$6^e$ Colloque Africain sur la Recherche en Informatique",
+	publisher = "INRIA",
+	author = "A.~Griewank and U. Naumann",
+	ad_theotech = "Combinatorics"
+}
+
+@INPROCEEDINGS{
+	   Naumann2003TLM,
+	author = "U. Naumann and A. Vehreschild",
+	title = "Tangent-Linear Models by ANTLR",
+	booktitle = "Computational Science and Its Applications - ICCSA 2006",
+	editor = "M. Gavrilova et al.",
+	volume = "3980",
+	series = "LNCS",
+	publisher = "Springer",
+	pages = "865--874",
+	year = "2003",
+	ad_theotech = "Implementation Strategies"
+}
+
+@INCOLLECTION{
+	   Stumm2008ESi,
+	author = "P. Stumm and A. Walter and J. Riehme and U. Naumann",
+	title = "Exploiting Structure in Navier-Stokes Simulations",
+	booktitle = "Advances in Automatic Differentiation",
+	editor = "C. Bischof et al.",
+	pages = "339--350",
+	year = "2008",
+	publisher = "Springer",
+	isbn = "978-3-540-68935-5",
+	issn = "1439-7358",
+	crossref = "bischof2008aia",
+	ad_tools = "NAGWare Fortran 95"
+}
+
+@ARTICLE{
+	   Naumann2006OJa,
+	author = "U. Naumann",
+	title = "Optimal {J}acobian accumulation is {NP}-complete",
+	journal = "Math. Prog.",
+	volume = "112",
+	pages = "427--441",
+	year = "2006",
+	publisher = "Springer",
+	ad_theotech = "Combinatorics"
+}
+
+@ARTICLE{
+	   Varnik2006TLS,
+	author = "E.~Varnik and U.~Naumann and A. Lyons",
+	title = "Toward Low Static Memory {J}acobian Accumulation",
+	journal = "WSEAS Transactions on Mathematics",
+	volume = "5",
+	number = "7",
+	pages = "109--117",
+	year = "2006",
+	publisher = "WSEAS",
+	ad_theotech = "Implementation Strategies"
+}
+
+@INPROCEEDINGS{
+	   Varnik2006OSJ,
+	year = "2006",
+	title = "On Symbolic {J}acobian Accumulation",
+	booktitle = "Proceedings of the $9^\text{th}$ WSEAS International Conference on Applied
+	   Mathematics",
+	publisher = "WSEAS",
+	pages = "536--541",
+	author = "E. Varnik and U.~Naumann",
+	ad_theotech = "Implementation Strategies"
+}
+
+@INPROCEEDINGS{
+	   Gendler2007ADo,
+	author = "D. Gendler and U. Naumann and B.~Christianson",
+	title = "Automatic Differentiation of Assembler Code",
+	booktitle = "Proceedings of the IADIS International Conference on Applied Computing",
+	publisher = "IADIS",
+	pages = "431--436",
+	year = "2007",
+	ad_theotech = "Implementation Strategies"
+}
+
+@INPROCEEDINGS{
+	   Naumann2007SDT,
+	author = "U. Naumann and D. Gendler and E. Varnik",
+	title = "Syntax-Directed Tangent-linear Code",
+	booktitle = "Proceedings of the IADIS International Conference on Applied Computing",
+	publisher = "IADIS",
+	pages = "425--430",
+	year = "2007",
+	ad_theotech = "Implementation Strategies"
+}
+
+@INPROCEEDINGS{
+	   Varnik2007PJA,
+	author = "E. Varnik and U. Naumann",
+	title = "Parallel {J}acobian Accumulation",
+	booktitle = "Parallel Computing: Architectures, Algorithms and Applications. Proceedings of
+	   the International Conference ParCo 2007, 4. - 7. September 2007",
+	year = "2007",
+	editor = "G. Joubert and C. Bischof and F. Peters and T. Lippert and M. B{\"u}cker
+	   and P. Gibbon and B. Mohr",
+	ad_theotech = "Parallelism"
+}
+
+@INPROCEEDINGS{
+	   Varnik2007Foe,
+	author = "E. Varnik and U. Naumann",
+	title = "Fill-out exploitation on compressed row storage of extended {J}acobians",
+	booktitle = "Proceedings of the IADIS International Conference on Applied Computing",
+	publisher = "IADIS",
+	pages = "793--796",
+	year = "2007",
+	ad_theotech = "Combinatorics"
+}
+
+@ARTICLE{
+	   Toivanen2009ESA,
+	author = "Toivanen, J. I. and M{\"a}kinen, R. A. E. and
+	   J{\"a}rvenp{\"a}{\"a}, S. and Yl{\"a}-Oijala, P. and Rahola,
+	   J.",
+	title = "Electromagnetic Sensitivity Analysis and Shape Optimization Using Method of Moments
+	   and Automatic Differentiation",
+	journal = "IEEE Transactions on Antennas \& Propagation",
+	volume = "57",
+	number = "1",
+	pages = "168--175",
+	year = "2009",
+	ad_theotech = "Sparsity",
+	ad_area = "Optimization, Shape optimization"
+}
+
