--- a/Manual/autodiff.bib
+++ b/Manual/autodiff.bib
@@ -19419,3 +19419,151 @@
 	ad_area = "Optimization, Shape optimization"
 }
 
+@ARTICLE{
+	   Gebremedhin2009ECo,
+	author = "A.H. Gebremedhin and A. Pothen and A. Tarafdar and A. Walther",
+	title = "Efficient Computation of Sparse {H}essians Using Coloring and Automatic
+	   Differentiation",
+	journal = "{INFORMS} Journal on Computing",
+	year = "2009",
+	volume = "21",
+	number = "2",
+	pages = "209--223",
+	ad_theotech = "Sparsity"
+}
+
+@ARTICLE{
+	   Gebremedhin2007NAa,
+	author = "A.H. Gebremedhin and A.Tarafdar and F. Manne and A. Pothen",
+	title = "New Acyclic and Star Coloring Algorithms with Applications to {H}essian Computation",
+	journal = "SIAM Journal on Scientific Computing",
+	year = "2007",
+	volume = "29",
+	number = "3",
+	pages = "1042--1072",
+	ad_theotech = "Hessian, Sparsity"
+}
+
+@ARTICLE{
+	   Bozdag2008AFf,
+	author = "D. Bozdag and A.H. Gebremedhin and F. Manne and E. Boman and U. Catalyurek",
+	title = "A Framework for Scalable Greedy Coloring on Distributed Memory Parallel Computers",
+	journal = "Journal of Parallel and Distributed Computing",
+	year = "2008",
+	volume = "68",
+	number = "4",
+	pages = "515--535",
+	ad_theotech = "Parallelism, Sparsity"
+}
+
+@INPROCEEDINGS{
+	   Karalashvili2009Saa,
+	author = "M. Karalashvili and A. Mhamdi and G. F. Dietze and H. M. B{\"u}cker and A.
+	   Vehreschild and R. Kneer and C. H. Bischof and W. Marquardt",
+	title = "Sensitivity analysis and identification of an effective heat transport model in wavy
+	   liquid films",
+	booktitle = "Progress in Computational Heat and Mass Transfer: Proceedings of the 6th
+	   International Conference on Heat and Mass Transfer, Guangzhou, China, May~18--21, 2009",
+	editor = "A. A. Mohamad and R. Bennacer and M. El-Ganaoui and K. Nandakumar and S. Huang",
+	publisher = "South China University of Technology",
+	pages = "644--651",
+	abstract = "Thin liquid films flowing down vertical or inclined planes are of high industrial
+	   relevance. Nevertheless, a predictive transport model describing the effects of wave-induced
+	   intensification of heat and mass transport for the design of technical systems does not yet exist.
+	   In this paper, a systematic approach for the identification of a suitable transport model (structure
+	   and parameters) for the effective heat transport coefficient in the reduced system of heat transport
+	   equations is presented. For this transport coefficient two different model structures are proposed.
+	   An investigation of parameter identifiability based on local sensitivity analysis is carried out for
+	   both model structures prior to model identification. It is shown that the number of model parameters
+	   can be significantly reduced by targeted selection of the identifiable parameter subsets. This
+	   facilitates to reduce the overall computational effort. After setting up the best identifiable
+	   parameter sets for each model structure, a nonlinear, constrained least-squares parameter estimation
+	   problem is stated and solved using standard solution methods. Automatic differentiation techniques
+	   are applied for efficient sensitivity computations as well as for the gradients calculation within
+	   the parameter estimation step. Finally, the best model candidate is determined using statistical
+	   model discrimination techniques.",
+	year = "2009",
+	ad_area = "Process Engineering",
+	ad_tools = "ADiMat"
+}
+
+@ARTICLE{
+	   Cheng2009DTS,
+	title = "Differentiation Transforming System",
+	author = "Qiang Cheng, Haibin Zhang, Bin Wang",
+	publisher = "ELSEVIER",
+	year = "2009",
+	journal = "Progress in Natural Science",
+	volume = "19(3)",
+	pages = "397--406",
+	abstract = "The differentiation transforming (DFT) system is developed to produce the tangent
+	   linear codes, which is used to calculate the Jaco- bian-and the Hessian-vector products with no
+	   truncation errors. This paper first gives the introduction of the functionality and features of the
+	   DFT system, and then discusses several techniques for the implementation of automatic
+	   differentiation tools, including data dependence analysis, singular differentiation and code
+	   optimization. Finally, the codes generated with DFT used in several applications have been
+	   demonstrated.",
+	ad_tools = "DFT"
+}
+
+@ARTICLE{
+	   Cheng2009ACG,
+	title = "Adjoint Code Generator",
+	author = "Qiang Cheng, Jianwen Cao, Bin Wang, Haibin Zhang",
+	publisher = "Springer",
+	year = "2009",
+	journal = "Science in China, Seriers F",
+	volume = "52(6)",
+	pages = "1--16",
+	abstract = "The adjoint code generator (ADG) is developed to produce the adjoint codes, which
+	   are used to analytically calculate gradients and the Hessian-vector products with the costs
+	   independent of the number of the independent variables. Different from other automatic
+	   differentiation tools, the implementation of ADG has advantages of using the least program behavior
+	   decomposition method and several static dependence analysis techniques. In this paper we first
+	   address the concerned concepts and fundamentals, and then introduce the functionality and the
+	   features of ADG. In particular, we also discuss the design architecture of ADG and implementation
+	   details including the recomputation and storing strategy and several techniques for code
+	   optimization. Some experimental results in several applications are presented at the end.",
+	ad_tools = "ADG"
+}
+
+@ARTICLE{
+	   Cheng2009Aoa,
+	title = "Algorithms of automatic differentiation",
+	author = "Qiang Cheng, Haibin Zhang, Bin Wang",
+	year = "2009",
+	journal = "MATHEMATICA NUMERICA SINICA",
+	volume = "31(1)",
+	pages = "15--36",
+	abstract = "We study fundamentals and techniques of automatic differentiation by discussing
+	   the wayfor calculatingdifferent kinds of first-andsecond-order derivatives.First we present the
+	   first-and second-order differentiation models in a simple way, then discuss the costs in terms of
+	   operations count and memory for calculating different derivatives with different differen tiation
+	   models, finally discuss some typical algorithms in solving the nonlinear problems via automatic
+	   differentiation with respect to the computational costs, both in operations count and in memory.
+	   Several fundamental techniques including checkpointing, forward accumu lating and backward
+	   accumulating are discussed.",
+	ad_theotech = "General"
+}
+
+@INPROCEEDINGS{
+	   Cheng2008Itp,
+	title = "Improving the performance of GPS/MET 3DVAR by using the ADG software",
+	author = "Qiang Cheng, Haibin Zhang, Yonghua Zhao, Bin Wang",
+	editor = "Honggao Yu, Yong Jiang",
+	publisher = "ACADEMIC",
+	year = "2008",
+	booktitle = "Proceedings of First International Conference of Modeling and Simulation",
+	series = "IV",
+	pages = "7--11",
+	abstract = "In this paper we calculate the gradient of the object function in GPS/MET
+	   three-dimensional variational data assimilation program (3DVAR) by replacing the adjoint model with
+	   that generated by using the ADG software. A number of techniques are used to reduce the time cost of
+	   the adjoint model. The main contribution of this work is to demonstrate that the time cost for
+	   developing the adjoint model is dramatically shortened from two years and half by hand to no more
+	   than three months by using the ADG software. The experimental results show that the time cost of the
+	   users&#8217; code is reduced by 34% after optimization.",
+	ad_area = "Data Assimilation",
+	ad_tools = "ADG"
+}
+
